--- a/src/index.ejs
+++ b/src/index.ejs
@@ -7,6 +7,7 @@
         <link rel="shortcut icon" href="img/icon.png" type="image/png?_=<%-webpack.hash%>" />
         <link rel="stylesheet" href="vendor/font-awesome-4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="vendor/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/animations.css">
     </head>
     <body>
         <div id="overlay"></div>
